--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
                     <h2 class="section__title">
                        Featured <span class="purple">Books </span> 
                     </h2>
+                    
                      <div class="books">
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/crack the coding interview.png" alt="">
                         </figure>
                         <div class="book__title">
@@ -104,8 +105,9 @@
                             <span class="book__price--normal">$59.95</span> $14.95
                         </div>
                        </div> 
+
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/atomic habits.jpg" alt="">
                         </figure>
                         <div class="book__title">
@@ -123,7 +125,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/david goggins.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -141,7 +143,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/deep work.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -172,7 +174,7 @@
                     </h2>
                      <div class="books">
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-1.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -190,7 +192,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-2.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -208,7 +210,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-3.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -226,7 +228,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-4.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -244,7 +246,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-5.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -262,7 +264,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-6.jpeg" alt="">
                         </figure>
                         <div class="book__title">
@@ -280,7 +282,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-7.jpg" alt="">
                         </figure>
                         <div class="book__title">
@@ -298,7 +300,7 @@
                         </div>
                        </div> 
                        <div class="book">
-                        <figure class="books__img--wrapper">
+                        <figure class="book__img--wrapper">
                             <img class="book__img" src="./assets/book-8.jpeg" alt="">
                         </figure>
                         <div class="book__title">
