--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Library</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/b4b84a6091.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <section id="landing">
@@ -17,7 +18,26 @@
               <li><a href="#" class="nav__link">Contact</a></li>
               <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
            </ul>
-         </div> 
+         <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
+         </button>
+         <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                <i class="fas fa-times"></i>
+            </button>
+            <ul class="menu__links">
+                <li class="menu__list">
+                    <a href="#" class="menu__link">Home</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#features" class="menu__link">Books</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link no-cursor">Contact</a>
+                </li>
+            </ul>
+          </div>
+         </div>
         </nav>
         <header>
             <div class="header__container">
@@ -85,7 +105,7 @@
                     <h2 class="section__title">
                        Featured <span class="purple">Books </span> 
                     </h2>
-                    
+
                      <div class="books">
                        <div class="book">
                         <figure class="book__img--wrapper">
@@ -171,7 +191,7 @@
                     <h2 class="section__title">
                        Latest
                         <span class="purple">Books </span> 
-                    </h2>
+                     </h2>
                      <div class="books">
                        <div class="book">
                         <figure class="book__img--wrapper">
@@ -321,11 +341,36 @@
                 </div>
               </div> 
         </section>
-        
 
-                </div>
-              </div> 
+        <section id="explore">
+          <div class="container">
+            <div class="row row__column">
+                <h2>Explore more <span class="purple">Books</span></h2>
+                <a href="#features">
+                  <button class="btn">Browse books</button>
+                  </a>
+            </div>
+          </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row row__column">
+                <a href="#">
+                <figure footer__logo>
+                    <img src="./assets/Library.svg" class="footer__logo--img" alt="">
+                </figure>
+                </a>
+                <div class="footer__list">
+                 <a href="" class="footer__link">Home</a>
+                 <a href="" class="footer__link no-cursor">About</a>
+                 <a href="" class="footer__link">Books</a>
+                 <a href="" class="footer__link no-cursor">Contact</a>
+                </div>
+                <div class="footer__copyright">Copyright &copy; 2025 Library</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
