--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
             </button>
             <ul class="menu__links">
                 <li class="menu__list">
-                    <a href="#" class="menu__link">Home</a>
+                    <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+                </li> 
+                    <a href="#features" class="menu__link" onclick="closeMenu()">Books</a>
                 </li>
                 <li class="menu__list">
-                    <a href="#features" class="menu__link">Books</a>
-                </li>
-                <li class="menu__list">
-                    <a href="#" class="menu__link no-cursor">Contact</a>
+                    <a href="#" class="menu__link no-cursor" onclick="closeMenu()">Contact</a>
                 </li>
             </ul>
           </div>
@@ -44,7 +43,9 @@
                 <div class="header__description">
                     <h1>America's most awarded online library platform</h1>
                     <h2>Find your dream book with <span class="purple">Library</span></h2>
+                    <a href="#features">
                     <button class="btn">Browse books</button>
+                    </a>
                 </div>
                 <figure class="header__img--wrapper">
                     <img src="./assets/Undraw_Books.svg" alt="">
